<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#B3000000"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/glassviewwb"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/glassview"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/switch1"
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:theme="@style/SCBSwitch"
                android:textColor="@color/white"
                android:checked="true"
                android:text="@string/service_active_state" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:id="@+id/expansion"
                android:src="@drawable/expandown"
                android:contentDescription="@string/expansionpanel"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/content"
            app:ael_expanded="false"
            app:ael_orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/ServiceDesc"
                android:layout_height="wrap_content" />
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@drawable/glassview"
        android:padding="5dp"
        android:id="@+id/setsmsview"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/check"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/glassview"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:id="@+id/edittext"
                android:background="@drawable/glassviewwb"
                android:hint="@string/enter_message_here"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:src="@drawable/cancel"
                android:onClick="clear"
                android:contentDescription="@string/expansionpanel"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="changesms"
            android:textAllCaps="true"
            android:background="@drawable/glassview"
            android:textColor="@color/white"
            android:text="@string/set_sms"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/smslist"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>